fix overlapping button on extreme zoom

--- a/src/template/index.css
+++ b/src/template/index.css
@@ -24,6 +24,7 @@ html, body {
   max-width: 100%;
   min-width: min-content;
   height: 100%;
+  min-height: fit-content;
   margin: auto;
   box-sizing: border-box;
 }
